import mongoose from "mongoose";

// Counter schema for auto-incrementing order numbers per hotel
const counterSchema = new mongoose.Schema({
  hotel: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'Hotel',
    required: true,
    unique: true,
  },
  seq: {
    type: Number,
    default: 1000, // Start from 1001
  },
});

export const Counter = mongoose.model('Counter', counterSchema);

const orderSchema = new mongoose.Schema({
  // Human-readable order number (e.g., 1001, 1002, etc.)
  orderNumber: {
    type: Number,
    // Not required - will be auto-generated by pre-save hook
  },
  hotel: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'Hotel',
    required: true,
  },
  room: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'Room',
    required: false,  // only for room service 
  },
  roomNumber: {
    type: String,
  },
  tableNumber: {
    type: String,
  },

  // staff info 
  orderBy: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'User',
    required: true,
  },
  orderByName: {
    type: String,
  },

  // customer info 
  customerId: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'User',
  },
  customerName: {
    type: String,
  },
  customerPhone: {
    type: String,
  },
  customerPhone: {
    type: String,
  },
  // order items 
  items: [
    {
      menuItem: {
        type: mongoose.Schema.Types.ObjectId,
        ref: 'MenuItem',
        required: false, // Optional - allows custom items without menuItem reference
      },
      name: { type: String, required: true },
      quantity: { type: Number, required: true, min: 1 },
      price: { type: Number, required: true },
      notes: {
        type: String,
      }
    },
  ],
  // pricing
  totalPrice: {
    type: Number,
    required: true,
  },
  // order type and status
  orderType: {
    type: String,
    enum: ['roomService', 'dineIn', 'takeaway'],
    default: 'roomService',
  },
  status: {
    type: String,
    enum: ['pending', 'confirmed', 'preparing', 'ready', 'delivered', 'cancelled'],
    default: 'pending',
  },
  priority: {
    type: String,
    enum: ['normal', 'high'],
    default: 'normal',
  },

  // additional info
  preparationTime: {
    type: Number, // In minutes
  },
  deliveredAt: {
    type: Date,
  },

  // Bill tracking
  billSent: {
    type: Boolean,
    default: false,
  },
  billSentAt: {
    type: Date,
  },
  billSentTo: {
    email: String,
    phone: String,
    method: {
      type: String,
      enum: ['email', 'sms', 'whatsapp'],
    },
  },
}, { timestamps: true });

// Indexes for performance
orderSchema.index({ hotel: 1, orderNumber: 1 }, { unique: true }); // Unique order number per hotel
orderSchema.index({ room: 1, status: 1 });  // find orders by hotel and staus
orderSchema.index({ hotel: 1, status: 1 });
orderSchema.index({ orderBy: 1, createdAt: -1 });  // find orders by staff
orderSchema.index({ status: 1, createdAt: -1 });  // find orders by status (newest first)

// Pre-save hook to auto-generate order number
orderSchema.pre('save', async function (next) {
  if (this.isNew && !this.orderNumber) {
    try {
      const counter = await Counter.findOneAndUpdate(
        { hotel: this.hotel },
        { $inc: { seq: 1 } },
        { new: true, upsert: true }
      );
      this.orderNumber = counter.seq;
      next();
    } catch (error) {
      next(error);
    }
  } else {
    next();
  }
});

export const Order = mongoose.model('Order', orderSchema);
